# polygon-decomposition-demo

./: .gitignore  CMakeLists.txt  README.md  polygon-decomposition-demo.pro
qml/: MainFace.qml  PolygonDrawingCanvas.qml  main.qml  qml.qrc
src/: main.cpp  polygon.cpp  polygon.h
